WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114258
Initialization skipped error on WinCario after
r147643
https://bugs.webkit.org/show_bug.cgi?id=114258
Summary
Initialization skipped error on WinCario after r147643
Gabor Loki
Reported
2013-04-09 02:43:38 PDT
There is compiler error on WinCario after
http://trac.webkit.org/changeset/147643
The output (
http://build.webkit.org/builders/WinCairo%20Release/builds/25100/steps/compile-webkit/logs/stdio
) says: platform\win\DragImageCairoWin.cpp(184) : error C2362: initialization of 'surface' is skipped by 'goto exit' which can be fixed by adding an extra block statement (
http://msdn.microsoft.com/en-us/library/s6s80d9f(v=vs.80).aspx
).
Attachments
Patch
(1.95 KB, patch)
2013-04-09 02:46 PDT
,
Gabor Loki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2013-04-09 02:46:58 PDT
Created
attachment 197014
[details]
Patch
Csaba Osztrogonác
Comment 2
2013-04-09 03:12:27 PDT
Comment on
attachment 197014
[details]
Patch LGTM, r=me.
WebKit Commit Bot
Comment 3
2013-04-09 03:43:08 PDT
Comment on
attachment 197014
[details]
Patch Clearing flags on attachment: 197014 Committed
r148003
: <
http://trac.webkit.org/changeset/148003
>
WebKit Commit Bot
Comment 4
2013-04-09 03:43:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug