Initialization skipped error on WinCario after r147643 https://bugs.webkit.org/show_bug.cgi?id=114258

Reviewed by Csaba Osztrogonác.

Build fix. Adding extra block statement to avoid error C2362 on WinCario

* platform/win/DragImageCairoWin.cpp:
(WebCore::createDragImageFromImage):


Canonical link: https://commits.webkit.org/132628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148003 268f45cc-cd09-0410-ab3c-d52691b4dbfc